@@ -38,13 +38,10 @@ import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
 import org.jkiss.dbeaver.DBDatabaseException;
 import org.jkiss.dbeaver.DBException;
-import org.jkiss.dbeaver.DBeaverPreferences;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.*;
 import org.jkiss.dbeaver.model.access.DBAPasswordChangeInfo;
 import org.jkiss.dbeaver.model.connection.DBPAuthInfo;
-import org.jkiss.dbeaver.model.connection.DBPDriver;
-import org.jkiss.dbeaver.model.connection.DBPDriverDependencies;
 import org.jkiss.dbeaver.model.exec.DBExecUtils;
 import org.jkiss.dbeaver.model.navigator.DBNNode;
 import org.jkiss.dbeaver.model.navigator.fs.DBNPathBase;
@@ -59,7 +56,6 @@ import org.jkiss.dbeaver.ui.*;
 import org.jkiss.dbeaver.ui.actions.datasource.DataSourceInvalidateHandler;
 import org.jkiss.dbeaver.ui.dialogs.*;
 import org.jkiss.dbeaver.ui.dialogs.connection.PasswordChangeDialog;
-import org.jkiss.dbeaver.ui.dialogs.driver.DriverDownloadDialog;
 import org.jkiss.dbeaver.ui.dialogs.driver.DriverEditHelpers;
 import org.jkiss.dbeaver.ui.dialogs.exec.ExecutionQueueErrorJob;
 import org.jkiss.dbeaver.ui.internal.UIConnectionMessages;
@@ -78,7 +74,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 
 /**
  * DBeaver UI core
@@ -87,7 +82,6 @@ public class DesktopUI extends ConsoleUserInterface {
 
     private static final Log log = Log.getLog(DesktopUI.class);
 
-    private TrayIconHandler trayItem;
     private WorkbenchContextListener contextListener;
 
     public static DesktopUI getInstance() {
@@ -106,15 +100,10 @@ public class DesktopUI extends ConsoleUserInterface {
     }
 
     private void dispose() {
-        if (trayItem != null) {
-            trayItem.hide();
-        }
     }
 
     // This method is called during startup thru @ComponentReference in workbench
     public void initialize() {
-        this.trayItem = new TrayIconHandler();
-
         new AbstractJob("Workbench listener") {
             @Override
             protected IStatus run(DBRProgressMonitor monitor) {
@@ -138,26 +127,6 @@ public class DesktopUI extends ConsoleUserInterface {
     }
 
     @Override
-    public void notifyAgent(String message, int status) {
-        if (!DBWorkbench.getPlatform().getPreferenceStore().getBoolean(DBeaverPreferences.AGENT_LONG_OPERATION_NOTIFY)) {
-            // Notifications disabled
-            return;
-        }
-        if (TrayIconHandler.isSupported()) {
-            UIUtils.syncExec(() -> Display.getCurrent().beep());
-            getInstance().trayItem.notify(message, status);
-        } else {
-            DBeaverNotifications.showNotification(
-                "agent.notify",
-                "Agent Notification",
-                message,
-                status == IStatus.INFO ? DBPMessageType.INFORMATION :
-                    (status == IStatus.ERROR ? DBPMessageType.ERROR : DBPMessageType.WARNING),
-                null);
-        }
-    }
-
-    @Override
     public boolean acceptLicense(String message, String licenseText) {
         return new UITask<Boolean>() {
             @Override
@@ -166,16 +135,6 @@ public class DesktopUI extends ConsoleUserInterface {
                     UIUtils.getActiveWorkbenchShell(),
                     message,
                     licenseText);
-            }
-        }.execute();
-    }
-
-    @Override
-    public boolean downloadDriverFiles(DBPDriver driver, DBPDriverDependencies dependencies) {
-        return new UITask<Boolean>() {
-            @Override
-            protected Boolean runTask() {
-                return DriverDownloadDialog.downloadDriverFiles(null, driver, dependencies);
             }
         }.execute();
     }
@@ -350,18 +309,18 @@ public class DesktopUI extends ConsoleUserInterface {
         }
         final List<Reply> reply = labels.stream()
             .map(s -> CommonUtils.isEmpty(s) ? null : new Reply(s))
-            .collect(Collectors.toList());
+            .toList();
 
-        return UIUtils.syncExec(new RunnableWithResult<UserChoiceResponse>() {
+        return UIUtils.syncExec(new RunnableWithResult<>() {
             public UserChoiceResponse runWithResult() {
                 List<Button> extraCheckboxes = new ArrayList<>(forAllLabels.size());
-                Integer[] selectedCheckboxIndex = { null };
+                Integer[] selectedCheckboxIndex = {null};
                 MessageBoxBuilder mbb = MessageBoxBuilder.builder(UIUtils.getActiveWorkbenchShell())
                     .setTitle(title)
                     .setMessage(message)
                     .setReplies(reply.stream().filter(Objects::nonNull).toArray(Reply[]::new))
                     .setPrimaryImage(DBIcon.STATUS_WARNING);
-                
+
                 if (previousChoice != null && reply.get(previousChoice) != null) {
                     mbb.setDefaultReply(reply.get(previousChoice));
                 }
@@ -386,7 +345,7 @@ public class DesktopUI extends ConsoleUserInterface {
                         }
                     });
                 }
-                
+
                 Reply result = mbb.showMessageBox();
                 int choiceIndex = reply.indexOf(result);
                 return new UserChoiceResponse(choiceIndex, selectedCheckboxIndex[0]);
@@ -397,11 +356,6 @@ public class DesktopUI extends ConsoleUserInterface {
     @Override
     public UserResponse showErrorStopRetryIgnore(String task, Throwable error, boolean queue) {
         return ExecutionQueueErrorJob.showError(task, error, queue);
-    }
-
-    @Override
-    public long getLongOperationTimeout() {
-        return DBWorkbench.getPlatform().getPreferenceStore().getLong(DBeaverPreferences.AGENT_LONG_OPERATION_TIMEOUT);
     }
 
     private static UserResponse showDatabaseError(String message, DBException error)
@@ -465,7 +419,7 @@ public class DesktopUI extends ConsoleUserInterface {
                 final BaseAuthDialog authDialog = new BaseAuthDialog(shell, prompt, passwordOnly, showSavePassword);
                 authDialog.setUserNameLabel(userNameLabel);
                 authDialog.setPasswordLabel(passwordLabel);
-                authDialog.setDescription(description);
+                authDialog.setDescription(description == null ? prompt : description);
                 if (!passwordOnly) {
                     authDialog.setUserName(userName);
                 }
